2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>

    * libcryptui/cryptui-keyset.c:
    * libcryptui/cryptui-keyset.h:
    * libcryptui/tests/cryptui-test-keyset.c:
    * libcryptui/tests/cryptui-test-ui.c:
    * plugins/applet/seahorse-applet.c:
    * plugins/epiphany/seahorse-extension.c:
    * plugins/gedit/seahorse-gedit.c:
    * plugins/nautilus/seahorse-tool.c: Show UIDs in the recipient
    selection dialog. Fixes bug #371636

2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-secure-memory.c: Secure memory reallocation
    fixes. Fixes bug #371666

2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c:
    * src/seahorse-keyserver-results.c: Describe part of key being
    exported in UI strings. Fixes bug #372099
    
2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>

    * acinclude.m4:
    * configure.in:
    * Makefile.am: Don't set seahorse-daemon setuid when not needed 
    to run mlock().

2006-11-06  Adam Schreiber  <sadam@clemson.edu>

    * help/ChangeLog: Added file for translation changes
    for the manual 
    * help/it: Added translation files (see the above file)

2006-11-05  Nate Nielsen  <nielsen@memberwebs.com>

    * NEWS:
    * README: Version 0.9.7
    * configure.in: Bump version number

2006-11-05  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-prompt.c: Change 'password' to 'passphrase'
    Fixes bug #369874

2006-11-02  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-key-source.c:
    * libseahorse/seahorse-key-source.h:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-pgp-source.h:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-source.c:
    * libseahorse/seahorse-unknown-source.c: