@@ -1,5 +1,13 @@
 2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * src/seahorse-keyserver-results.glade: Change default window size
+    * libseahorse/seahorse-progress.c: Show progress in keyserver search
+    * libseahorse/seahorse-hkp-source.c: 
+    * src/seahorse-keyserver-results.c: Fix problem with 'No matching keys
+    found' when syncing. Fixes #369616
+
+2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libcryptui/cryptui-keyset.c:
     * libcryptui/cryptui-keyset.h:
     * libcryptui/tests/cryptui-test-keyset.c:
